<resources>
    <string name="app_name">Tapfo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proceed">Verify</string>
    <string name="set_passcode">Set 4 Digit Passcode</string>
    <string name="next_time">set 4 digit 2FA passcode \nfor login</string>
    <string name="next_time1">Set Passcode</string>
    <string name="next_time2">Passcode</string>
    <string name="re_enter_passcode">Re-enter Passcode</string>
    <string name="unable_to_verify">Unable to Verify</string>
    <string name="you_have_entered"><![CDATA[You have entered incorrect details \nTry again ]]></string>
    <string name="forgot_passcode_try_with_otp">Forgot Passcode? Try with OTP</string>
    <string name="hi_nice_to_meet_you">Hi ! nice to meet you!</string>
    <string name="allow_your_location"><![CDATA[Allow your location to start exploring \noffers around you]]></string>
    <string name="allow_location">Allow Location</string>
    <string name="not_now">Not Now</string>
    <string name="email_id">Email Id</string>
    <string name="more">More</string>
    <string name="ShopCompair">Shop&amp;Compair</string>
    <string name="offers_coupons"><![CDATA[Offers & Coupons]]></string>
    <string name="merchant_store_detail">Merchant Store Detail</string>
    <string name="service_more"><![CDATA[Service & More]]></string>
    <string name="education_courses_certificates"><![CDATA[Education Courses & Certificates]]></string>
    <string name="offers">Offers</string>
    <string name="favourites">Favourites</string>
    <string name="tcash">Tcash</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="cashback_merchants">Cashback Merchants</string>
    <string name="less">Less</string>
    <string name="All">All</string>
    <string name="Offers">Offers</string>
    <string name="popular_merchants">Popular Merchants</string>
    <string name="redirected_please_wait2">Due to network low, Redirected taking longer than expected</string>
    <string name="wow_you_unlocked_extra_tcashback">Congrats! Your Extra Cashback Unlocked</string>
    <string name="merchant">Merchant</string>
    <string name="earn_tcash">Earn TCash</string>
    <string name="active">Active</string>
    <string name="cashback_tracking_report">Cashback report generates in %s hrs after you order</string>
    <string name="don_t_forget_about_cashback_rule_terms"><![CDATA[Don\'t forget to check Cashback Rates]]></string>
    <string name="continue_on">Continue on</string>
    <string name="cashback_valid_only">* Cashback valid on only 3 orders per IP address/email/contact no. in a month</string>
    <string name="active_merchant">Active Cashback Merchant</string>
    <string name="close">Close</string>
    <string name="complete_order_info"><![CDATA[Only Successful orders are valid for Tapfo Cashback. To know more about Tcashback read the Terms & Conditions.]]></string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="added_in_fev">Added in my favorite!</string>
    <string name="removed_from_fav">Removed from favourites</string>
    <string name="no_favourite_stored_or_link">No Favourite stored or link</string>
    <string name="my_favourites">Favourites</string>
    <string name="balance">Balance</string>
    <string name="total_earnings_till_date">Total Earned ( Till date )</string>
    <string name="you_don_t_have_any_orders">you don\'t have any orders with cashback yet.\nShop &amp; Earn now!</string>
    <string name="filter_by_earning_period">Filter By Earning Period</string>
    <string name="rupee_">₹%s</string>
    <string name="rupee">₹</string>
    <string name="cashback_verified">Cashback Verified</string>
    <string name="merchants_details">Merchants Details:</string>
    <string name="cashback_merchant">Cashback Merchant</string>
    <string name="visit_again">Visit Again</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="order_amount">Order Amount</string>
    <string name="cashback_details">Cashback Details:</string>
    <string name="share">Share</string>
    <string name="merchant_cashback_mess">Note: Cashback reports are subject to the merchant policy. Merchant shares some order details with us for cashback/reward purposes under cashback rules &amp; terms.</string>
    <string name="cashback_pending">Cashback Pending</string>
    <string name="cashback_rejected">Cashback Rejected</string>
    <string name="cashback_verified_mess">Congrats! Your %s Cashback is verified from %s</string>
    <string name="cashback_rejected_mess">Oh, Your %s Cashback is rejected from %s</string>
    <string name="cashback_pending_mess">Your %s Cashback is pending from %s</string>
    <string name="tcashback_status_">TCashback Status: %s</string>
    <string name="validation_period_">Validation Period: %s</string>
    <string name="need_help">Need Help?</string>
    <string name="customer_support_24x7">Customer Support (24x7)</string>
    <string name="call">Call</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="this_month">This Month</string>
    <string name="last_month">Last Month</string>
    <string name="last_90_days">Last 90 days</string>
    <string name="last_6_month">Last 6 Months</string>
    <string name="till_date">till date</string>
    <string name="validation_period">Validation period</string>
    <string name="tcashback_status">Tcashback Status</string>
    <string name="verified_info">Verified: It\'s verified cashback from merchant. Users can redeem it.</string>
    <string name="rejected_info">Rejected: Cashback has been rejected from merchant due to its cashback/rewards terms &amp; policies.</string>
    <string name="pending_info">Pending: The cashback is still pending from our merchant side. Once merchant approves the status will be updated automatically to verified/rejected in the given validation period.</string>
    <string name="general_question">General Question</string>
    <string name="question1">Tcashback: Tapfo Cashback from Tapfo is Real cash that it offers on cashback terms. The verified Tcashback is redeemable via given methods.</string>
    <string name="question2">Reference ID: This reference ID is generated via cashback merchant for cashback and tracking purposes.</string>
    <string name="question3">Pending: The cashback is still pending from our merchant side. Once merchant approves the status will be updated automatically to verified/rejected in the given validation period.</string>
    <string name="question4">Verified: It\'s verified cashback from merchant. Users can redeem it.</string>
    <string name="question5">Rejected: Tcashback has been rejected from our merchant due to its cashback/rewards rules &amp; terms.</string>
    <string name="question6">Validation period: The period in which our merchant verifies your order to confirm its status. On merchant cashback terms &amp; policies, the cashback status will be updated on any date under the given validation period.</string>
    <string name="have_questions_contact_us">Have Questions? Contact us</string>
    <string name="note">Note: All transactions will be tracked at a base slab for all categories and user types, same shall be rectified at the time of validation.</string>
    <string name="get_in_touch_contact_us_for_your_queries">Get in touch! Contact us for your Queries</string>
    <string name="need_support_message_us">Need Support? Message us</string>
    <string name="request_call_back">Request Call Back</string>
    <string name="raise_ticket">Raise Ticket</string>
    <string name="other_support_mail_us">Other Support Mail us</string>
    <string name="message_us">Message Us</string>
    <string name="subject">Subject</string>
    <string name="sent">Sent</string>
    <string name="call_request">Call Request</string>
    <string name="edit">Edit</string>
    <string name="submit_ticket">Submit Ticket</string>
    <string name="request_call">Request Call</string>
    <string name="request_submitted">Request Submitted</string>
    <string name="redeem_earnings">Redeem Earnings</string>
    <string name="transfer">Transfer</string>
    <string name="clear_all">Clear all</string>
    <string name="notification">Notification</string>
    <string name="no_new_notifications_updates">No new notifications updates</string>
    <string name="stay_tuned_for_new_notifications">Stay tuned, for new notifications</string>
    <string name="search">Search</string>
    <string name="game_search">Search and play 1500+ games</string>
    <string name="trending_merchants">Trending Merchants</string>
    <string name="shop_now">Shop Now</string>
    <string name="redeem_now">Redeem Now</string>
    <string name="coupon_code">COUPON CODE</string>
    <string name="use_this_coupon_code_at_checkout">Use this coupon code at checkout:</string>
    <string name="checkout_at_merchant_store">Checkout at merchant store</string>
    <string name="offers_deals"><![CDATA[Offers & Deals]]></string>
    <string name="merchant_deals">Merchant Deals</string>
    <string name="Games_Favourite">Favourite</string>
    <string name="Cashback">Cashback</string>
    <string name="Merchants">Merchants</string>
    <string name="Games_ForYou">For You</string>
    <string name="Ola">Ola</string>
    <string name="Uber">Uber</string>
    <string name="categories">Categories</string>
    <string name="_offers">%s Offers</string>
    <string name="_coupons">%s Coupons</string>
    <string name="empty_title_offer">No %s found!</string>
    <string name="empty_offer_mess">Currently, no %s are found, stay tuned for upcoming offers, deals &amp; coupons.</string>
    <string name="_interested">%s Interested</string>
    <string name="valid_till_">Valid till %s</string>
    <string name="last_updated">updated on %s</string>
    <string name="logout">Logout</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="channel_description">tapfo_channel</string>
    <string name="related_search">Related Search</string>
    <string name="max_cashback_per_order">*max cashback per order</string>
    <string name="max_cashback_per_offer_order">*max cashback offer per order</string>
    <string name="who_tcash_works">Who Tcash works?</string>
    <string name="tcashback_details">Tcashback Details</string>
    <string name="cashback_tracking">Cashback Tracking</string>
    <string name="cashback_validation">Cashback Validation</string>
    <string name="cashback_rates">Cashback Rates*</string>
    <string name="important_points_to_ensure_your_cashback_rules_trems"><![CDATA[Important Points to ensure your cashback Rules & Terms]]></string>
    <string name="please_wait_we_are_redirecting">Please wait we are redirecting…</string>
    <string name="activate_cashback">Activate Cashback</string>
    <string name="twallet">Twallet</string>
    <string name="total_payable">Total Payable</string>
    <string name="available_balance">Available Balance</string>
    <string name="topup_wallet">Topup Wallet</string>
    <string name="enter_topup_amount">Enter Topup Amount</string>
    <string name="select_from_popular_denomination">Select from popular Denomination</string>
    <string name="wallet_vouchers">Wallet Vouchers</string>
    <string name="recharge_now">Recharge Now</string>
    <string name="All_pending_cashback_transactions">Your all Cashback and rewards will be credited in your fopay balance. Our merchants takes 45 to 60 days to validate the order to verify your pending cashback.</string>
    <string name="pending_credits">Rewards &amp; Cashback</string>
    <string name="view_earnings">View Earnings</string>
</resources>