<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.tcash.CashbackStatusInfoDialogFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/sp_white_top_corner_10"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp10"
            android:paddingTop="@dimen/dp20"
            android:paddingEnd="@dimen/dp10"
            android:paddingBottom="@dimen/dp20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/general_question"
                android:textColor="@color/black2"
                android:textSize="@dimen/sp18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/question1"
                android:textColor="@color/black2" />

            <TextView
                android:id="@+id/question2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/question2"
                android:textColor="@color/black2" />

            <TextView
                android:id="@+id/question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/question3"
                android:textColor="@color/black2" />

            <TextView
                android:id="@+id/question4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/question4"
                android:textColor="@color/black2" />

            <TextView
                android:id="@+id/question5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/question5"
                android:textColor="@color/black2" />

            <TextView
                android:id="@+id/question6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/question6"
                android:textColor="@color/black2" />

            <TextView
                android:id="@+id/noteTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/note"
                android:textColor="@color/black2" />

            <RelativeLayout
                android:id="@+id/reContactUs"
                android:layout_marginTop="@dimen/dp20"
                android:backgroundTint="@color/blue_bg_light"
                android:background="@drawable/sp_white_corner_10"
                android:padding="@dimen/dp15"
                android:layout_marginBottom="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/needHelpTv"
                    android:text="@string/have_questions_contact_us"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_below="@+id/needHelpTv"
                    android:text="@string/customer_support_24x7"
                    android:textColor="@color/purple_500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/callTv"
                    android:drawableTint="@color/purple_500"
                    android:textColor="@color/purple_500"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_call" />
            </RelativeLayout>

            <TextView
                android:id="@+id/closeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp5"
                android:background="@drawable/sp_black_corner_20"
                android:backgroundTint="@color/grey_light"
                android:paddingStart="@dimen/dp20"
                android:paddingTop="@dimen/dp5"
                android:paddingEnd="@dimen/dp20"
                android:paddingBottom="@dimen/dp5"
                android:text="@string/close"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>



</LinearLayout>