<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">


<ImageView
    android:src="@drawable/ic_allow_location"
    android:layout_width="@dimen/dp200"
    android:layout_height="@dimen/dp200"/>

    <TextView
        android:text="@string/hi_nice_to_meet_you"
        android:textStyle="bold"
        android:textSize="@dimen/sp20"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:gravity="center"
        android:layout_margin="@dimen/dp10"
        android:text="@string/allow_your_location"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/allowLocationBtn"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:paddingStart="@dimen/dp40"
        android:paddingEnd="@dimen/dp40"
        android:text="@string/allow_location"
        android:layout_height="@dimen/button_height"/>

    <TextView
        android:id="@+id/notNowTv"
        android:textColor="@color/purple_500"
        android:text="@string/not_now"
        android:textSize="@dimen/sp16"
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>