<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tcash.CashbackStatusInfoDialogFragment">


    <LinearLayout
        android:background="@drawable/sp_white_top_corner_10"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp20"
        android:paddingBottom="@dimen/dp20"
        android:paddingStart="@dimen/dp10"
        android:paddingEnd="@dimen/dp10"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tcashback_status"
            android:textColor="@color/black2"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pendingTv"
            android:text="@string/pending_info"
            android:layout_marginTop="@dimen/dp10"
            android:textColor="@color/black2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/verifiedTv"
            android:text="@string/verified_info"
            android:layout_marginTop="@dimen/dp10"
            android:textColor="@color/black2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/rejectedTv"
            android:text="@string/rejected_info"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp10"
            android:textColor="@color/black2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/closeTv"
            android:layout_margin="@dimen/dp5"
            android:text="@string/close"
            android:backgroundTint="@color/grey_light"
            android:background="@drawable/sp_black_corner_20"
            android:paddingStart="@dimen/dp20"
            android:paddingEnd="@dimen/dp20"
            android:paddingBottom="@dimen/dp5"
            android:paddingTop="@dimen/dp5"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</FrameLayout>