<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sp_white_corner_10"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp10">

    <View
        android:id="@+id/line"
        android:layout_width="@dimen/dp50"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:background="@color/grey_light" />

    <ImageView
        android:id="@+id/lockIv"
        android:layout_width="@dimen/dp25"
        android:layout_height="@dimen/dp25"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp10"
        android:src="@drawable/ic_lock"
        app:tint="@color/green_light" />

    <TextView
        android:id="@+id/hintUnlockTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/sp12"
        android:text="@string/wow_you_unlocked_extra_tcashback"
        app:fontFamily="@font/sans_medium"
        android:textColor="@color/green_light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10">

        <TextView
            android:id="@+id/headingMerchantTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:fontFamily="@font/sans_medium"
            android:text="@string/merchant" />

        <TextView
            android:id="@+id/companyNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headingMerchantTv"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_toStartOf="@+id/companyImageIv"
            android:textColor="@color/black2"
            app:fontFamily="@font/sans_medium"
            android:textSize="@dimen/sp18"
            android:textStyle="bold"
            tools:text="The Man Company" />

        <TextView
            android:id="@+id/headingReward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/companyNameTv"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp10"
            app:fontFamily="@font/sans_medium"
            android:text="@string/earn_tcash" />

        <TextView
            android:id="@+id/rewardTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headingReward"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            app:fontFamily="@font/sans_medium"
            android:layout_toStartOf="@+id/companyImageIv"
            android:textColor="@color/black2"
            android:textSize="@dimen/sp18"
            android:textStyle="bold"
            tools:text="Upto 9.5% Cashback*" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rewardTv"
            android:layout_gravity="center"
            android:text="@string/max_cashback_per_order"
            app:fontFamily="@font/sans_medium"
            android:textSize="@dimen/sp10" />

        <ImageView
            android:id="@+id/companyImageIv"
            android:layout_width="@dimen/dp60"
            android:layout_height="@dimen/dp60"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/dp10"
            android:src="@drawable/sp_black_corner_20" />

        <TextView
            android:id="@+id/activeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/companyImageIv"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dp10"
            android:text="@string/active"
            android:textColor="@color/black"
            app:fontFamily="@font/sans_medium"
            app:drawableStartCompat="@drawable/ic_dot" />

        <TextView
            android:id="@+id/howTCashWorkTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activeTv"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp5"
            app:fontFamily="@font/sans_medium"
            android:layout_marginEnd="@dimen/dp10"
            android:text="@string/who_tcash_works"
            android:textColor="@color/purple_500"
            app:drawableStartCompat="@drawable/ic_dot" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/recyclerLi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        android:background="@drawable/sp_black_corner_10"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5" />

        <TextView
            android:id="@+id/termsTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp10"
            android:text="@string/cashback_valid_only"
            android:textColor="@color/white"
            android:textSize="@dimen/sp12" />
    </LinearLayout>


    <TextView
        android:id="@+id/trackingReportTimeTv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp40"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:background="@drawable/sp_cashback_tracking"
        android:gravity="center"
        android:paddingStart="@dimen/dp10"
        android:paddingEnd="@dimen/dp10"
        android:text="@string/cashback_tracking_report"
        android:textColor="@color/black"
        app:fontFamily="@font/sans_medium"
        android:textSize="@dimen/sp12" />


    <TextView
        android:id="@+id/rulesTermsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        android:gravity="center"
        android:paddingStart="@dimen/dp10"
        android:paddingEnd="@dimen/dp10"
        android:text="@string/don_t_forget_about_cashback_rule_terms"
        android:textColor="@color/black2"
        app:fontFamily="@font/sans_medium"
        android:textSize="@dimen/sp12" />


    <LinearLayout
        android:id="@+id/continueLi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sp_tcashback_button"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp5"
        android:paddingBottom="@dimen/dp5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_on"
            app:fontFamily="@font/sans_medium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/nameTv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_on"
            app:fontFamily="@font/sans_medium"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>